Use renderButton() for proper Google Sign-In button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="title">Offline-first Chat</div>
             </div>
             <div class="auth">
-                <button id="google-login" class="ghost">Login with Google</button>
+                <div id="google-login-container"></div>
                 <button id="logout" class="ghost ghost-danger" hidden>Logout</button>
             </div>
         </header>
