feat: store chat history in Google Drive appData for serverless sync

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
                 <div class="section-header">Notes</div>
                 <ul class="notes">
-                    <li>Pure frontend; no backend or database.</li>
-                    <li>Chats are stored locally in your browser per account.</li>
-                    <li>To sync across devices, you need to add cloud storage later.</li>
+                    <li>Pure frontend; no backend servers.</li>
+                    <li>Chats sync to your Google Drive (appData folder) after sign-in.</li>
+                    <li>Data stays inside your Google account; revoke access anytime from Google security settings.</li>
                     <li>Users must share email IDs manually; there is no discovery service.</li>
                 </ul>
             </section>
