fix: require user gesture for Drive OAuth popup (storagerelay fix)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div id="google-login-container" class="g_id_signin" data-type="standard" data-size="large"
                     data-theme="outline" data-text="signin_with" data-shape="pill">
                 </div>
+                <button id="sync-drive" class="ghost" hidden>Sync to Drive</button>
                 <button id="logout" class="ghost ghost-danger" hidden>Logout</button>
             </div>
         </header>
