docs: update index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer
         onload="window.onGoogleLibraryLoad && window.onGoogleLibraryLoad();"></script>
+    <meta name="google-site-verification" content="SdeY2poCFNBw9AeQhlC5LVYL7NzT0lSyjJR8xMHkto8" />
 </head>
 
 <body>
