fix: add client_id to g_id_signin button element

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     data-callback="handleCredentialResponse" data-auto_prompt="false">
                 </div>
                 <div id="google-login-container" class="g_id_signin" data-type="standard" data-size="large"
-                    data-theme="outline" data-text="signin_with" data-shape="pill">
+                    data-theme="outline" data-text="signin_with" data-shape="pill"
+                    data-client_id="59648450302-sqkk4pdujkt4hrm0uuhq95pq55b4jg2k.apps.googleusercontent.com">
                 </div>
                 <button id="sync-drive" class="ghost" hidden>Sync to Drive</button>
                 <button id="logout" class="ghost ghost-danger" hidden>Logout</button>
