--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             }
         });
     </script>
-    <script src="app.js"></script>
+    <script defer src="app.js"></script>
 </body>
 
 </html>
