Sync logout between header and body via custom event

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
             signInBtn?.addEventListener('click', () => {
                 clearStoredGoogleUser();
                 initGoogleSignInButton();
+                // Dispatch custom event so body knows to logout
+                window.dispatchEvent(new CustomEvent('harith-logout'));
             });
         }
 
