Add favicon and make recent chats scrollable with fixed height

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://harithkavish.github.io/style.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="https://harithkavish.github.io/favicon.svg" type="image/svg+xml" />
     <!-- Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer
         onload="window.onGoogleLibraryLoad && window.onGoogleLibraryLoad();"></script>
