--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
 
         <div class="layout">
             <section class="panel info">
+                <div class="section-header">Current User</div>
+                <div id="user-card" class="user-card empty">Not signed in</div>
+
+                <div class="section-header">Start a Conversation</div>
                 <form id="start-chat-form" class="start-form">
-                    <div class="input-with-button">
-                        <input id="peer-email" name="peer-email" type="email" placeholder="Enter Peer Email ID" required />
-                        <button type="submit">→</button>
-                    </div>
+                    <label for="peer-email">Peer email</label>
+                    <input id="peer-email" name="peer-email" type="email" placeholder="friend@example.com" required />
+                    <button type="submit">Open chat</button>
                 </form>
 
                 <div class="section-header">Recent Chats</div>
