Remove 'Chatting with' label from chat header

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 
         <div class="layout">
             <section class="panel info">
-                <div id="user-card" class="user-card empty" style="display: none;"></div>
-
                 <form id="start-chat-form" class="start-form">
                     <div class="input-with-button">
-                        <input id="peer-email" name="peer-email" type="email" placeholder="Enter Peer Email ID" required />
+                        <input id="peer-email" name="peer-email" type="email" placeholder="Enter Peer Email ID"
+                            required />
                         <button type="submit">→</button>
                     </div>
                 </form>
@@ -41,10 +40,7 @@
 
             <section class="panel chat">
                 <div class="chat-header">
-                    <div>
-                        <div class="eyebrow">Chatting with</div>
-                        <div id="chat-peer" class="chat-peer">No peer selected</div>
-                    </div>
+                    <div id="chat-peer" class="chat-peer">No peer selected</div>
                     <div class="status" id="auth-status">Signed out</div>
                 </div>
                 <div id="messages" class="messages">
