Add mobile WhatsApp-like UI with peer selection and back button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 
             <section class="panel chat">
                 <div class="chat-header">
-                    <div id="chat-peer" class="chat-peer">No peer selected</div>
+                    <div class="chat-header-left">
+                        <button id="back-button" class="back-button" style="display: none;">←</button>
+                        <div id="chat-peer" class="chat-peer">No peer selected</div>
+                    </div>
                     <div class="status" id="auth-status">Signed out</div>
                 </div>
                 <div id="messages" class="messages">
