Fix auth status not updating after login on same page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend Chat (No Backend)</title>
+    <title>Chat</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
@@ -121,8 +121,9 @@
             };
             storeGoogleUser(user);
             renderSignedInButton(user);
-            if (window.handleCredentialResponse) {
-                window.handleCredentialResponse(credentialResponse);
+            // Call handler in app.js to update the chat app state
+            if (window.handleGoogleSignIn) {
+                window.handleGoogleSignIn();
             }
         }
 
