--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://harithkavish.github.io/style.css" />
+
+    <!-- Harith Design System v1.0.0 -->
+    <link rel="stylesheet" href="https://harithkavish.github.io/harith-design-system/v1.0.0/tokens.css">
+    <link rel="stylesheet" href="https://harithkavish.github.io/harith-design-system/v1.0.0/base.css">
+    <link rel="stylesheet" href="https://harithkavish.github.io/harith-design-system/v1.0.0/components.css">
+    <link rel="stylesheet" href="https://harithkavish.github.io/harith-design-system/v1.0.0/utils.css">
+
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="https://harithkavish.github.io/favicon.svg" type="image/svg+xml" />
     <!-- Google Identity Services -->
-    <script src="https://accounts.google.com/gsi/client" async defer
-        onload="window.onGoogleLibraryLoad && window.onGoogleLibraryLoad();"></script>
-    <script src="https://harithkavish.github.io/script.js" defer></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+    <!-- Harith Design System logic -->
+    <script src="https://harithkavish.github.io/harith-design-system/v1.0.0/theme-toggle.js"></script>
+    <script src="https://harithkavish.github.io/harith-design-system/v1.0.0/harith-shell.js"></script>
+
     <meta name="google-site-verification" content="SdeY2poCFNBw9AeQhlC5LVYL7NzT0lSyjJR8xMHkto8" />
 </head>
 
@@ -59,127 +68,133 @@
     </main>
     <div id="sharedFooter"></div>
     <script defer>
-        const GOOGLE_USER_STORAGE_KEY = 'harith_google_user';
-
-        function getStoredGoogleUser() {
-            try {
-                const raw = localStorage.getItem(GOOGLE_USER_STORAGE_KEY);
-                return raw ? JSON.parse(raw) : null;
-            } catch (err) {
-                return null;
-            }
-        }
-
-        function storeGoogleUser(user) {
-            if (!user) return;
-            localStorage.setItem(GOOGLE_USER_STORAGE_KEY, JSON.stringify(user));
-        }
-
-        function clearStoredGoogleUser() {
-            localStorage.removeItem(GOOGLE_USER_STORAGE_KEY);
-        }
-
-        function extractProfileFromCredential(credential) {
-            if (!credential) return null;
-            try {
-                const payload = credential.split('.')[1];
-                const base64 = payload.replace(/-/g, '+').replace(/_/g, '/');
-                const decoded = decodeURIComponent(atob(base64)
-                    .split('')
-                    .map(char => `%${('00' + char.charCodeAt(0).toString(16)).slice(-2)}`)
-                    .join(''));
-                return JSON.parse(decoded);
-            } catch (err) {
-                return null;
-            }
-        }
-
-        function renderSignedInButton(user) {
-            const googleButtonTarget = document.getElementById('googleSignInButton');
-            if (!googleButtonTarget) return;
-            googleButtonTarget.innerHTML = `
-                <button type="button" class="signed-in-button" aria-label="Signed in as ${user.name}">
-                    <img src="${user.picture || 'https://www.gravatar.com/avatar/?d=mp'}" alt="${user.name} avatar"
-                        class="signed-in-button__avatar" loading="lazy" />
-                    <span class="signed-in-button__name">${user.name}</span>
-                </button>`;
-            const signInBtn = googleButtonTarget.querySelector('button');
-            signInBtn?.addEventListener('click', () => {
-                clearStoredGoogleUser();
-                initGoogleSignInButton();
-                // Dispatch custom event so body knows to logout
-                window.dispatchEvent(new CustomEvent('harith-logout'));
-            });
-        }
-
-        function handleGoogleCredentialResponse(credentialResponse) {
-            const profile = extractProfileFromCredential(credentialResponse?.credential);
-            const user = {
-                name: profile?.name || 'Signed in',
-                picture: profile?.picture || '',
-                email: profile?.email || ''
-            };
-            storeGoogleUser(user);
-            renderSignedInButton(user);
-            // Call handler in app.js to update the chat app state
-            if (window.handleGoogleSignIn) {
-                window.handleGoogleSignIn();
-            }
-        }
-
-        let googleButtonRetries = 0;
-        function initGoogleSignInButton() {
-            const googleButtonTarget = document.getElementById('googleSignInButton');
-            if (!googleButtonTarget) return;
-            const storedProfile = getStoredGoogleUser();
-            if (storedProfile) {
-                renderSignedInButton(storedProfile);
-                return;
-            }
-            if (!window.google?.accounts?.id) {
-                if (googleButtonRetries < 10) {
-                    googleButtonRetries++;
-                    setTimeout(initGoogleSignInButton, 250);
-                }
-                return;
-            }
-            googleButtonTarget.innerHTML = '';
-            google.accounts.id.initialize({
-                client_id: '59648450302-sqkk4pdujkt4hrm0uuhq95pq55b4jg2k.apps.googleusercontent.com',
-                callback: handleGoogleCredentialResponse
-            });
-            google.accounts.id.renderButton(
-                googleButtonTarget,
-                { theme: 'outline', size: 'medium', type: 'standard', shape: 'pill' }
-            );
-        }
-
-        function injectChatHeaderAuth(actions) {
-            if (!actions || document.getElementById('chat-auth-controls')) return;
-            const html = `
-                <div id="chat-auth-controls" class="chat-header-actions">
-                    <button id="sync-drive" class="ghost" hidden>Sync to Drive</button>
-                </div>`;
-            actions.insertAdjacentHTML('beforeend', html);
-        }
-
         document.addEventListener('DOMContentLoaded', () => {
-            if (window.HarithShell) {
+            // 1. Render Shell
+            if (typeof HarithShell !== 'undefined') {
                 HarithShell.renderHeader({
                     target: '#sharedHeader',
-                    brand: {
-                        title: 'Chat',
-                        tagline: 'Peer-to-peer chat with Drive persistence'
-                    }
+                    brand: { title: 'Converse', tagline: 'Secure P2P Chat' },
+                    navLinks: [
+                        { label: 'Home', href: 'https://harithkavish.github.io/' }
+                    ]
                 });
-                HarithShell.renderFooter({
-                    target: '#sharedFooter',
-                    text: 'Harith Kavish'
-                });
-                const actions = document.querySelector('.shared-header__actions');
-                injectChatHeaderAuth(actions);
-                initGoogleSignInButton();
+                HarithShell.renderFooter({ target: '#sharedFooter', text: 'Harith Kavish' });
             }
+
+            // 2. Initialize Theme Toggle
+            const toggleBtn = document.getElementById('darkModeToggle');
+            if (toggleBtn && window.HarithTheme) {
+                toggleBtn.addEventListener('click', HarithTheme.toggle);
+                const current = HarithTheme.get();
+                toggleBtn.textContent = current === 'dark' ? '☀️' : '🌙';
+            }
+
+            // 3. User Profile / Google Sign-In Logic
+            const GOOGLE_USER_KEY = 'harith_google_user';
+            const googleBtnTarget = document.getElementById('googleSignInButton');
+
+            function renderProfile(user) {
+                if (!googleBtnTarget) return;
+                const dropdownId = 'userProfileDropdown';
+                googleBtnTarget.style.position = 'relative';
+
+                googleBtnTarget.innerHTML = `
+                    <button type="button" class="signed-in-button" aria-label="Signed in as ${user.name}" aria-expanded="false" aria-controls="${dropdownId}">
+                        <img src="${user.picture || 'https://www.gravatar.com/avatar/?d=mp'}" alt="${user.name}" class="signed-in-button__avatar" loading="lazy" />
+                    </button>
+                    <div id="${dropdownId}" class="user-dropdown-menu">
+                        <div class="user-dropdown-header">
+                            <span class="user-dropdown-name">${user.name}</span>
+                        </div>
+                        <button type="button" class="user-dropdown-action" id="logoutBtn">
+                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                                <polyline points="16 17 21 12 16 7"></polyline>
+                                <line x1="21" y1="12" x2="9" y2="12"></line>
+                            </svg>
+                            Sign Out
+                        </button>
+                    </div>`;
+
+                const btn = googleBtnTarget.querySelector('.signed-in-button');
+                const dropdown = document.getElementById(dropdownId);
+                const logout = document.getElementById('logoutBtn');
+
+                btn?.addEventListener('click', (e) => {
+                    e.stopPropagation();
+                    const expanded = btn.getAttribute('aria-expanded') === 'true';
+                    btn.setAttribute('aria-expanded', !expanded);
+                    btn.classList.toggle('active');
+                    dropdown.classList.toggle('show');
+                });
+
+                dropdown?.addEventListener('click', e => e.stopPropagation());
+
+                logout?.addEventListener('click', () => {
+                    localStorage.removeItem(GOOGLE_USER_KEY);
+                    location.reload();
+                    window.dispatchEvent(new CustomEvent('harith-logout'));
+                });
+
+                document.addEventListener('click', () => {
+                    if (btn) {
+                        btn.setAttribute('aria-expanded', 'false');
+                        btn.classList.remove('active');
+                    }
+                    if (dropdown) dropdown.classList.remove('show');
+                });
+            }
+
+            function decodeJwt(credential) {
+                try {
+                    const payload = credential.split('.')[1];
+                    const base64 = payload.replace(/-/g, '+').replace(/_/g, '/');
+                    const decoded = decodeURIComponent(atob(base64)
+                        .split('')
+                        .map(char => '%' + ('00' + char.charCodeAt(0).toString(16)).slice(-2))
+                        .join(''));
+                    return JSON.parse(decoded);
+                } catch (e) { return null; }
+            }
+
+            function initGSI() {
+                if (!googleBtnTarget) return;
+                // Check stored user first
+                try {
+                    const stored = localStorage.getItem(GOOGLE_USER_KEY);
+                    if (stored) {
+                        const user = JSON.parse(stored);
+                        if (user && user.name) {
+                            renderProfile(user);
+                            if (window.handleGoogleSignIn) window.handleGoogleSignIn();
+                            return;
+                        }
+                    }
+                } catch (e) { }
+
+                // Initialize Google Button
+                if (window.google) {
+                    google.accounts.id.initialize({
+                        client_id: "235284376269-a8bgbs53t4jp8j82s38dbu621l47484o.apps.googleusercontent.com",
+                        callback: (response) => {
+                            const payload = decodeJwt(response.credential);
+                            if (payload) {
+                                const user = {
+                                    name: payload.name,
+                                    picture: payload.picture,
+                                    email: payload.email
+                                };
+                                localStorage.setItem(GOOGLE_USER_KEY, JSON.stringify(user));
+                                renderProfile(user);
+                                if (window.handleGoogleSignIn) window.handleGoogleSignIn();
+                            }
+                        }
+                    });
+                    google.accounts.id.renderButton(googleBtnTarget, { theme: "outline", size: "large", shape: "pill" });
+                }
+            }
+
+            setTimeout(initGSI, 100);
         });
     </script>
     <script defer src="app.js"></script>
